[package]
name = "related-works-graph"
version = "0.0.1"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Related works graph generator"
repository = "https://github.com/lo48576/related-works-graph"

[package.metadata.docs.rs]
all-features = true

[dependencies]
failure = "0.1.5"
structopt = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "lo48576/related-works-graph" }
